flickering/movement when the time text's width changes as the numbers update, caused by not having fixed width: FIXED

--- a/src/pages/styles/AddProducts.scss
+++ b/src/pages/styles/AddProducts.scss
@@ -1,7 +1,11 @@
 @import "../../index.scss";
 
 .time-n-date {
+    margin-left: auto;
     display: flex;
+    .real-time {
+        width: 110px;
+    }
     .date-time {
         margin-left: 1rem;
     }
