--- a/src/pages/styles/ProductsList.scss
+++ b/src/pages/styles/ProductsList.scss
@@ -3,12 +3,15 @@
 .header-bar {
     margin: 1rem;
     display: flex;
-    justify-content: space-between;
     align-items: center; 
     padding: 1rem;
+    .page-title {
+        margin-left: 1rem;
+    }
     .add-product {
         height: 40px;
         padding: 0.5rem 3rem;
+        margin-left: auto;
         background-color: $primary-color;
         color: white;
         border: none;
